--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,6 @@
       width: 1053px;
       margin: 0 auto;
       display: flex;
-      justify-content: flex-start;
       gap: 18px;
     }
 
@@ -100,8 +99,6 @@
       box-sizing: border-box;
       margin-bottom: 8px;
       cursor: pointer;
-      border-radius: 0;
-      transition: all 0.3s ease;
     }
 
     .carreapps:hover {
@@ -124,14 +121,13 @@
 
     .right-content {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       gap: 18px;
-      flex-shrink: 0;
     }
 
     .info-box, .rss-box {
       width: 349px;
-      height: 180px;
+      height: auto;
       border: 1px solid #752878;
       box-sizing: border-box;
       display: flex;
@@ -139,7 +135,6 @@
     }
 
     .info-header, .rss-header {
-      width: 100%;
       height: 22px;
       background-color: #F0D6F1;
       border-bottom: 1px solid #752878;
@@ -158,35 +153,28 @@
       overflow-y: auto;
     }
 
-    .whatsapp-expanded {
-      display: none;
-      width: 890px;
-      height: 554px;
-      border: 1px solid #752878;
-      margin-top: 20px;
-      flex-direction: column;
-      background-color: #752878;
-      color: white;
-    }
-
-    .whatsapp-header {
-      background-color: #5b1d5f;
+    .item-entry {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 5px 10px;
-      font-weight: bold;
+      margin-bottom: 8px;
     }
 
-    .whatsapp-close {
-      cursor: pointer;
-      font-size: 18px;
+    .item-entry img {
+      width: 80px;
+      height: auto;
+      margin-left: 10px;
+    }
+
+    .item-entry a {
+      text-decoration: none;
+      color: black;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <div class="header">
-    <img src="https://i.postimg.cc/Pq4HtjMH/t-l-chargement.jpg" alt="Logo" class="logo" />
+    <img src="https://i.postimg.cc/g2N2LHTB/sfr-neuflogo.jpg" alt="Logo" class="logo" />
     <div class="search-box">
       <form action="https://search.yahoo.com/search" method="get" target="_blank" style="display: flex; align-items: center;">
         <input type="text" name="p" placeholder="Chercher une recette..." class="search-input" required />
@@ -201,59 +189,29 @@
   <div class="container">
     <div class="left-column">
       <button class="flashmail-button" onclick="window.open('https://mail.aol.com/', '_blank')">Flashmail</button>
-
       <div class="carreapps"><img src="https://i.postimg.cc/zv6v7GVz/moncompte.gif" alt="Mon Compte" /><a href="http://tplinkwifi.net" target="_blank">Mon compte</a></div>
       <div class="carreapps"><img src="https://i.postimg.cc/LsK4hWZW/hp1-icons.png" alt="Actualité" /><a href="https://fr.news.yahoo.com/" target="_blank">Actualité</a></div>
       <div class="carreapps"><img src="https://i.postimg.cc/ZYVqjj19/hp5-icons.png" alt="Météo" /><a href="https://www.meteoetradar.com/" target="_blank">Météo</a></div>
       <div class="carreapps"><img src="https://i.postimg.cc/2SB8kY3v/hp3-icons.png" alt="Programme TV" /><a href="https://www.programme-tv.com/mon-programme-television.html" target="_blank">Programme TV</a></div>
       <div class="carreapps"><img src="https://i.postimg.cc/K8D208WZ/popeater_for_portal.png" alt="Purepeople" /><a href="https://www.purepeople.com/" target="_blank">Purepeople</a></div>
       <div class="carreapps"><img src="https://i.postimg.cc/HxNhsqrc/h6-icons.png" alt="Spiritaccount" /><a href="https://spiritaccount.net/" target="_blank">Spiritaccount</a></div>
-
-      <!-- Nouveau bouton WhatsApp -->
-      <div class="carreapps" onclick="openWhatsApp()">
-        <img src="https://i.postimg.cc/GpqLtS4z/226757.png" alt="WhatsApp" />
-        <span style="font-size: 16px; font-weight: 600;">WhatsApp</span>
-      </div>
     </div>
 
     <div class="right-content">
-      <div style="display: flex; gap: 18px;">
-        <!-- Actualités à gauche -->
-        <div class="rss-box">
-          <div class="rss-header">Actualités France Info</div>
-          <div class="rss-content" id="rss-feed">Chargement...</div>
-        </div>
-
-        <!-- Info abonné à droite -->
-        <div class="info-box">
-          <div class="info-header">info abonnée club internet</div>
-          <div class="info-content">jellyfin le nouveau service de vod!</div>
-        </div>
+      <div class="rss-box">
+        <div class="rss-header">Actualités France Info</div>
+        <div class="rss-content" id="rss-feed">Chargement...</div>
       </div>
 
-      <!-- Boîte WhatsApp agrandie (affichée uniquement après clic) -->
-      <div class="whatsapp-expanded" id="whatsapp-frame">
-        <div class="whatsapp-header">
-          <span class="whatsapp-close" onclick="closeWhatsApp()">❌</span>
-          <span>WhatsApp</span>
-        </div>
-        <div style="padding: 20px;">
-          <p>WhatsApp ne peut pas être affiché ici pour des raisons de sécurité.</p>
-          <p><a href="https://web.whatsapp.com/" target="_blank" style="color: yellow;">Cliquez ici pour ouvrir WhatsApp Web</a></p>
-        </div>
+      <div class="info-box">
+        <div class="info-header">info abonnée club internet</div>
+        <div class="info-content" id="info-content">Chargement...</div>
       </div>
     </div>
   </div>
 
   <script>
-    function openWhatsApp() {
-      document.getElementById('whatsapp-frame').style.display = 'flex';
-    }
-
-    function closeWhatsApp() {
-      document.getElementById('whatsapp-frame').style.display = 'none';
-    }
-
+    // Flux France Info
     fetch('https://api.allorigins.win/get?url=' + encodeURIComponent('https://www.franceinfo.fr/titres.rss'))
       .then(response => response.json())
       .then(data => {
@@ -272,6 +230,28 @@
       .catch(err => {
         document.getElementById('rss-feed').innerText = 'Erreur de chargement du flux RSS';
       });
+
+    // Flux WordPress info abonnée
+    fetch('https://api.rss2json.com/v1/api.json?rss_url=https://aetsfr.wordpress.com/feed/')
+      .then(response => response.json())
+      .then(data => {
+        const container = document.getElementById('info-content');
+        container.innerHTML = '';
+        data.items.slice(0, 5).forEach(item => {
+          container.innerHTML += `
+            <div class="item-entry">
+              <div style="flex: 1;">
+                <a href="${item.link}" target="_blank">${item.title}</a>
+              </div>
+              <img src="${item.thumbnail || 'https://via.placeholder.com/80'}" alt="Image" />
+            </div>
+          `;
+        });
+      })
+      .catch(error => {
+        document.getElementById('info-content').innerText = 'Erreur de chargement du flux.';
+      });
   </script>
 </body>
 </html>
+
